<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/menuProfile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />
    <item
        android:id="@+id/menuChat"
        android:icon="@drawable/ic_chat"
        android:title="@string/chat" />
    <item
        android:id="@+id/recview"
        android:icon="@drawable/ic_search"
        android:title="Search" />

    <item android:title="">
        <menu>
            <item
                android:id="@+id/menuAboutUs"
                android:icon="@drawable/ic_aboutus"
                android:title="@string/about_us" />
            <item
                android:id="@+id/menuSettings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings" />
            <item
                android:id="@+id/menuLogOut"
                android:icon="@drawable/ic_logout"
                android:title="@string/log_out" />
        </menu>
    </item>
</menu>