<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parentView"
    tools:context=".Fragments.SettingsFragment"
    android:background="@color/back">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:background="@color/back">
                </TextView>

                <TextView
                    android:id="@+id/main_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="-75dp"
                    android:text="Settings"
                    android:textColor="@color/colorPrimary"
                    android:textAllCaps="true"
                    android:textSize="35sp"
                    android:textStyle="bold">
                </TextView>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:layout_marginTop="20dp"
                android:textAllCaps="true"
                android:layout_gravity="center"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/changeEmail">
            </TextView>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/change_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                app:cornerRadius="12dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/button">
            </com.google.android.material.button.MaterialButton>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/passowrd"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/changepassword">
            </TextView>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/change_password"
                android:layout_gravity="center"
                app:cornerRadius="12dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/pas_button"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp">
            </com.google.android.material.button.MaterialButton>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/light"
                android:layout_gravity="center"
                android:textAllCaps="true"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:text="@string/deletebutton">
            </TextView>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/delete_button"
                android:layout_gravity="center"
                android:backgroundTint="@color/red"
                app:cornerRadius="12dp"
                android:text="@string/del_button"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp">
            </com.google.android.material.button.MaterialButton>
        </LinearLayout>
    </ScrollView>
</FrameLayout>