<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_element"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scaleType="center"
    tools:context=".Activities.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_shir"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal='true'
            android:layout_marginTop="60dp"
            android:fontFamily="@font/montserrat_alternates_semibold"
            android:gravity="center"
            android:text="@string/app_name_after"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="italic" />

        <LinearLayout
            android:id="@+id/l1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="190dp"
            android:orientation="horizontal"
            android:weightSum="2">


            <Button
                android:id="@+id/btn_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="@font/montserrat_alternates_semibold"
                android:text="@string/btn_sign_in"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_registry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="@font/montserrat_alternates_semibold"
                android:text="@string/btn_registry"
                android:textColor="@color/white" />

        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/forgot_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/socialIcons"
        android:layout_centerInParent="true"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="@font/montserrat_alternates_semibold"
        android:text="@string/forgot_password"
        android:textColor="@color/white">

    </TextView>

    <LinearLayout
        android:id="@+id/socialIcons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal='true'
        android:layout_marginBottom="55dp"
        android:orientation="horizontal"
        android:weightSum="1">


        <ImageView
            android:id="@+id/google_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:src="@drawable/google" />


    </LinearLayout>

</RelativeLayout>